# dynamic_visualizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: card_specification.md  cards_reference.md  development_guide.md
examples/cards/: 1-simple_card.toml  10-overlay_1d_card.toml  11-sync_demo_card.toml  12-range_overlay_card.toml  13-stick_card.toml  14-table_style_card.toml  15-grouped_table_card.toml  2-multivariable_card.toml  3-compound_comparison_card.toml  4-compound_composite_card.toml  5-overlay_card.toml  6-mixed_overlay_card.toml  7-fragment_overlay_card.toml  7-overlay_variable_card.toml  8-colormap_card.toml  8-precursor_overlay_card.toml  9-eventline_card.toml  9-fragment_overlay_with_labels.toml
examples/data/simple_study/: time_series_1.json  time_series_2.json  time_series_3.json
examples/data/table_study/: grouped_model_metrics.json  table_metrics.json
schema/: data_payload.schema.json
src/visualizer/: __init__.py  __main__.py  _version.py  app.py  chart_style_args.py  state.py  table_style.py
src/visualizer/cards/: __init__.py  loader.py  models.py  utils.py
src/visualizer/controller/: session.py
src/visualizer/data/: models.py  repository.py
src/visualizer/gui/: layout.py  main_window.py  panels.py  theme.py
src/visualizer/interpretation/: specs.py
src/visualizer/schema/: data_payload.schema.json
tests/: test_cards.py  test_integration_gui.py  test_interpretation.py  test_renderer.py  test_repository.py  test_session_controller.py  test_table_renderer.py
tests/data/: simple_series.json
(+26 files in other folders)
